# awsmock

./: #.clang-format#  .clang-format  .codedocs  .gitignore  .release-please-config.json  .release-please-manifest.json  .releaserc  .semver  .sv4git.yml  CHANGELOG.md  CMakeLists.txt  CMakeVersion.cmake  LICENSE  README.md  VERSION  onix30.dtd  version.txt
awsmock/: CMakeLists.txt
awsmock/src/: main.cpp
awsmock/src/config/: Configuration.cpp
awsmock/src/controller/: ResourceNotFound.cpp  RestService.cpp  Router.cpp
awsmock/src/handling/: JsonAPIAbstractRelatedResourceBuilder.cpp  JsonAPIAbstractResourceBuilder.cpp  JsonAPIAbstractRootResourceBuilder.cpp  JsonAPIErrorBuilder.cpp  JsonAPIResourceBuilder.cpp  JsonAPIResourceCollectionBuilder.cpp
awsmock/src/resource/: AbstractResource.cpp  Exception.cpp  HandlerException.cpp
core/: CMakeLists.txt
core/src/config/: Configuration.cpp
core/src/dto/: CompleteMultipartUploadResult.cpp  CreateBucketResponse.cpp  InitiateMultipartUploadResult.cpp  ListAllBucketResponse.cpp
core/src/exception/: CoreException.cpp  DatabaseException.cpp  ResourceNotFoundException.cpp  ServiceException.cpp
core/src/logging/: LibriJsonFormatter.cpp  LogStream.cpp  Logger.cpp
core/src/monitoring/: MetricService.cpp  MetricSystemCollector.cpp
core/src/utils/: AwsUtils.cpp  CryptoUtils.cpp  CurlUtils.cpp  DateTimeUtils.cpp  DirUtils.cpp  DirectoryWatcher.cpp  FileUtils.cpp  HttpUtils.cpp  JsonUtils.cpp  LogStream.cpp  RandomUtils.cpp  StringUtils.cpp  SystemUtils.cpp  TarUtils.cpp  TestUtils.cpp
core/tst/: AwsUtilsTests.cpp  CMakeLists.txt  ConfigurationTests.cpp  CryptoTests.cpp  DirUtilsTests.cpp  DirectoryWatcherTests.cpp  FileUtilsTests.cpp  FileWatcherTests.cpp  HttpUtilsTests.cpp  JsonUtilsTests.cpp  RandomUtilsTests.cpp  StringUtilsTests.cpp  TarUtilsTests.cpp  main.cpp
db/: CMakeLists.txt
db/src/: Database.cpp  LambdaDatabase.cpp  S3Database.cpp  SNSDatabase.cpp  SQSDatabase.cpp  ServiceDatabase.cpp  TransferDatabase.cpp
db/src/repository/: Database.cpp  LambdaDatabase.cpp  S3Database.cpp  SNSDatabase.cpp  SQSDatabase.cpp  ServiceDatabase.cpp  TransferDatabase.cpp
db/src/utils/: TestUtils.cpp
db/tst/: CMakeLists.txt  DatabaseTests.cpp  LambdaDatabaseTests.cpp  S3DatabaseTests.cpp  SNSDatabaseTests.cpp  SQSDatabaseTests.cpp  ServiceDatabaseTests.cpp  TransferDatabaseTest.cpp  main.cpp
docs/: CMakeLists.txt  Doxyfile
docs/S3/: S3Functions.md
docs/SNS/: SNSFunctions.md
docs/man/: awslocal.1.md  awsmockcfg.1.md  awsmockcognito.1.md  awsmockctl.1  awsmockctl.1.md  awsmockdynamodb.1.md  awsmockkms.1.md  awsmocklambda.1.md  awsmockmgr.1  awsmockmgr.1.md  awsmocks3.1.md  awsmocksecretsmanager.1.md  awsmocksns.1.md  awsmocksqs.1.md  awsmockssm.1.md  awsmocktransfer.1.md
dto/: CMakeLists.txt
dto/src/docker/: Container.cpp  CreateContainerRequest.cpp
dto/src/lambda/: CreateNotification.cpp  DeadLetterConfig.cpp  InvocationNotification.cpp  ListFunctionResponse.cpp  ListTagsResponse.cpp
dto/src/s3/: CopyObjectResponse.cpp  CreateBucketRequest.cpp  DeleteObjectRequest.cpp  DeleteObjectsRequest.cpp  GetObjectResponse.cpp  PutBucketVersioningRequest.cpp  PutObjectRequest.cpp  UserIdentity.cpp
dto/src/sns/: SqsNotificationRequest.cpp  SubscribeRequest.cpp  SubscribeResponse.cpp
dto/src/sqs/: CreateQueueRequest.cpp  DeleteQueueRequest.cpp  DeleteQueueResponse.cpp  MessageAttribute.cpp  ReceiveMessageResponse.cpp  SendMessageRequest.cpp  SendMessageResponse.cpp  SetQueueAttributesResponse.cpp
manager/: CMakeLists.txt
manager/src/: main.cpp
manager/src/controller/: ResourceNotFound.cpp
manager/src/resource/: AbstractResource.cpp  HandlerException.cpp
service/: CMakeLists.txt
service/src/: AbstractHandler.cpp  AbstractWorker.cpp  DockerService.cpp  FtpServer.cpp  LambdaCreator.cpp  LambdaExecutor.cpp  LambdaHandler.cpp  LambdaMonitoring.cpp  LambdaServer.cpp  LambdaService.cpp  LambdaServiceHelper.cpp  S3Handler.cpp  S3Monitoring.cpp  S3Server.cpp  S3Service.cpp  SNSHandler.cpp  SNSMonitoring.cpp  SNSServer.cpp  SNSService.cpp  SQSHandler.cpp  SQSMonitoring.cpp  SQSServer.cpp  SQSService.cpp  TransferHandler.cpp  TransferServer.cpp  TransferService.cpp
service/src/ftpserver/: FtpSession.cpp  UserDatabase.cpp
service/tst/: CMakeLists.txt  DockerServiceTests.cpp  S3ServerTests.cpp  S3ServiceTests.cpp  SNSServiceTests.cpp  SQSServerTests.cpp  SQSServiceTests.cpp  TestCommon.h  main.cpp
src/awslocal/: CMakeLists.txt
src/awslocal/src/: AwsLocal.cpp  main.cpp
src/controller/: CMakeLists.txt
src/controller/src/: Configuration.cpp  Controller.cpp  main.cpp
src/core/: CMakeLists.txt
src/core/tst/: AwsUtilsTests.cpp  CMakeLists.txt  ConfigurationTests.cpp  CryptoTests.cpp  DateTimeUtilsTests.cpp  DirUtilsTests.cpp  DirectoryWatcherTests.cpp  FileUtilsTests.cpp  HttpUtilsTests.cpp  JsonUtilsTests.cpp  JwtUtilsTests.cpp  RandomUtilsTests.cpp  StringUtilsTests.cpp  SystemUtilsTests.cpp  TarUtilsTests.cpp  XmlUtilsTests.cpp  ZipUtilsTests.cpp  main.cpp
src/db/: CMakeLists.txt
src/db/tst/: CMakeLists.txt  CognitoDatabaseTests.cpp  CognitoMemoryDbTests.cpp  DatabaseTests.cpp  LambdaDatabaseTests.cpp  LambdaMemoryDbTests.cpp  ModuleDatabaseTests.cpp  ModuleMemoryDbTests.cpp  S3DatabaseTests.cpp  S3MemoryDbTests.cpp  SNSDatabaseTests.cpp  SNSMemoryDbTests.cpp  SQSDatabaseTests.cpp  SQSMemoryDbTests.cpp  SSMDatabaseTests.cpp  SecretsManagerDatabaseTests.cpp  ServiceDatabaseTests.cpp  TransferDatabaseTest.cpp  TransferMemoryDbTest.cpp  main.cpp
src/dto/: CMakeLists.txt
src/dto/include/: AdminGetUserResponse.h
src/dto/src/: Module.cpp
src/dto/tst/: CMakeLists.txt  CreateServerRequestTest.cpp  main.cpp
src/manager/: CMakeLists.txt  awsmockgw
src/manager/src/: main.cpp
src/service/: CMakeLists.txt
src/service/tst/: CMakeLists.txt  CognitoServerCliTest.cpp  CognitoServerJavaTests.cpp  CognitoServiceTests.cpp  DockerServiceTests.cpp  DynamoDbServerCliTest.cpp  S3ServerTests.cpp  (+33 more)
worker/: CMakeLists.txt
worker/src/: AbstractWorker.cpp  LambdaWorker.cpp  S3Worker.cpp  SQSWorker.cpp  TransferWorker.cpp
(+2172 files in other folders)
